fix(server): increase gap between argument collapsible cards

--- a/server/assets/app/css/pages/test_case_run.css
+++ b/server/assets/app/css/pages/test_case_run.css
@@ -5,7 +5,7 @@
   padding: var(--noora-spacing-7) var(--noora-spacing-5);
 
   & .argument-collapsible + .argument-collapsible {
-    margin-top: var(--noora-spacing-3);
+    margin-top: var(--noora-spacing-5);
   }
 
   & .argument-collapsible {
